# fusion

./: README.md  package.json
frontend/: .prettierrc  package-lock.json  package.json
frontend/src/: app.css  app.html
frontend/src/lib/: Navbar.svelte  NotConnectedDisplay.svelte  TitleBar.svelte  stores.ts  types.ts
frontend/src/lib/matches/: Match.svelte
frontend/src/lib/profile/: MiniProfile.svelte  ProfileBanner.svelte
frontend/src/routes/: +layout.svelte  +page.svelte
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lcu.rs  main.rs
src-tauri/src/event/: mod.rs  status.rs
src-tauri/src/lcu/: api.rs  mod.rs
