[package]
name = "fusion"
version = "0.1.0"
description = "League of Legends Companion Client"
authors = ["Sulaxan/Encast"]
license = "GNU General Public License v3.0"
repository = "https://github.com/Sulaxan/fusion"
default-run = "fusion"
edition = "2021"
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.4.0", features = [] }
shaco = "0.6.0"
anyhow = "1.0.72"
thiserror = "1.0.44"
reqwest = "0.11.18"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread", "sync", "time"] }
async-trait = "0.1.72"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
